crates/php-parser/tests/snapshots/integration__array_invalid_key.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php $a = [=> 'value'];

=== errors ===
expected expression
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Array": [
                    {
                      "key": {
                        "kind": "Error",
                        "span": {
                          "start": 12,
                          "end": 14
                        }
                      },
                      "value": {
                        "kind": {
                          "String": "value"
                        },
                        "span": {
                          "start": 15,
                          "end": 22
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 12,
                        "end": 22
                      }
                    }
                  ]
                },
                "span": {
                  "start": 11,
                  "end": 23
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 23
          }
        }
      },
      "span": {
        "start": 6,
        "end": 25
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 25
  }
}
