crates/php-parser/tests/snapshots/integration__array_nested_unpack_syntax.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php [...[...[1, 2]], 3];

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": [
              {
                "key": null,
                "value": {
                  "kind": {
                    "Array": [
                      {
                        "key": null,
                        "value": {
                          "kind": {
                            "Array": [
                              {
                                "key": null,
                                "value": {
                                  "kind": {
                                    "Int": 1
                                  },
                                  "span": {
                                    "start": 15,
                                    "end": 16
                                  }
                                },
                                "unpack": false,
                                "span": {
                                  "start": 15,
                                  "end": 16
                                }
                              },
                              {
                                "key": null,
                                "value": {
                                  "kind": {
                                    "Int": 2
                                  },
                                  "span": {
                                    "start": 18,
                                    "end": 19
                                  }
                                },
                                "unpack": false,
                                "span": {
                                  "start": 18,
                                  "end": 19
                                }
                              }
                            ]
                          },
                          "span": {
                            "start": 14,
                            "end": 20
                          }
                        },
                        "unpack": true,
                        "span": {
                          "start": 11,
                          "end": 20
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 10,
                    "end": 21
                  }
                },
                "unpack": true,
                "span": {
                  "start": 7,
                  "end": 21
                }
              },
              {
                "key": null,
                "value": {
                  "kind": {
                    "Int": 3
                  },
                  "span": {
                    "start": 23,
                    "end": 24
                  }
                },
                "unpack": false,
                "span": {
                  "start": 23,
                  "end": 24
                }
              }
            ]
          },
          "span": {
            "start": 6,
            "end": 25
          }
        }
      },
      "span": {
        "start": 6,
        "end": 27
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 27
  }
}
