crates/php-parser/tests/snapshots/integration__array_old_syntax.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php array(1, 2, 3); array('a' => 1, 'b' => 2);
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": [
              {
                "key": null,
                "value": {
                  "kind": {
                    "Int": 1
                  },
                  "span": {
                    "start": 12,
                    "end": 13
                  }
                },
                "unpack": false,
                "span": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "key": null,
                "value": {
                  "kind": {
                    "Int": 2
                  },
                  "span": {
                    "start": 15,
                    "end": 16
                  }
                },
                "unpack": false,
                "span": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "key": null,
                "value": {
                  "kind": {
                    "Int": 3
                  },
                  "span": {
                    "start": 18,
                    "end": 19
                  }
                },
                "unpack": false,
                "span": {
                  "start": 18,
                  "end": 19
                }
              }
            ]
          },
          "span": {
            "start": 6,
            "end": 20
          }
        }
      },
      "span": {
        "start": 6,
        "end": 22
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Array": [
              {
                "key": {
                  "kind": {
                    "String": "a"
                  },
                  "span": {
                    "start": 28,
                    "end": 31
                  }
                },
                "value": {
                  "kind": {
                    "Int": 1
                  },
                  "span": {
                    "start": 35,
                    "end": 36
                  }
                },
                "unpack": false,
                "span": {
                  "start": 28,
                  "end": 36
                }
              },
              {
                "key": {
                  "kind": {
                    "String": "b"
                  },
                  "span": {
                    "start": 38,
                    "end": 41
                  }
                },
                "value": {
                  "kind": {
                    "Int": 2
                  },
                  "span": {
                    "start": 45,
                    "end": 46
                  }
                },
                "unpack": false,
                "span": {
                  "start": 38,
                  "end": 46
                }
              }
            ]
          },
          "span": {
            "start": 22,
            "end": 47
          }
        }
      },
      "span": {
        "start": 22,
        "end": 48
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 48
  }
}
