crates/php-parser/tests/snapshots/integration__array_operations.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
$data = [1, 2, 3, 4, 5];
$sum = 0;
foreach ($data as $item) {
    $sum = $sum + $item;
}
$map = ['a' => 1, 'b' => 2];
$val = $map['a'];
echo $sum;
echo $val;

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "data"
                },
                "span": {
                  "start": 6,
                  "end": 11
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Array": [
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 1
                        },
                        "span": {
                          "start": 15,
                          "end": 16
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 15,
                        "end": 16
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 2
                        },
                        "span": {
                          "start": 18,
                          "end": 19
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 18,
                        "end": 19
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 3
                        },
                        "span": {
                          "start": 21,
                          "end": 22
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 21,
                        "end": 22
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 4
                        },
                        "span": {
                          "start": 24,
                          "end": 25
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 24,
                        "end": 25
                      }
                    },
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "Int": 5
                        },
                        "span": {
                          "start": 27,
                          "end": 28
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 27,
                        "end": 28
                      }
                    }
                  ]
                },
                "span": {
                  "start": 14,
                  "end": 29
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 29
          }
        }
      },
      "span": {
        "start": 6,
        "end": 31
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "sum"
                },
                "span": {
                  "start": 31,
                  "end": 35
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Int": 0
                },
                "span": {
                  "start": 38,
                  "end": 39
                }
              }
            }
          },
          "span": {
            "start": 31,
            "end": 39
          }
        }
      },
      "span": {
        "start": 31,
        "end": 41
      }
    },
    {
      "kind": {
        "Foreach": {
          "expr": {
            "kind": {
              "Variable": "data"
            },
            "span": {
              "start": 50,
              "end": 55
            }
          },
          "key": null,
          "value": {
            "kind": {
              "Variable": "item"
            },
            "span": {
              "start": 59,
              "end": 64
            }
          },
          "body": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "Assign": {
                          "target": {
                            "kind": {
                              "Variable": "sum"
                            },
                            "span": {
                              "start": 72,
                              "end": 76
                            }
                          },
                          "op": "Assign",
                          "value": {
                            "kind": {
                              "Binary": {
                                "left": {
                                  "kind": {
                                    "Variable": "sum"
                                  },
                                  "span": {
                                    "start": 79,
                                    "end": 83
                                  }
                                },
                                "op": "Add",
                                "right": {
                                  "kind": {
                                    "Variable": "item"
                                  },
                                  "span": {
                                    "start": 86,
                                    "end": 91
                                  }
                                }
                              }
                            },
                            "span": {
                              "start": 79,
                              "end": 91
                            }
                          }
                        }
                      },
                      "span": {
                        "start": 72,
                        "end": 91
                      }
                    }
                  },
                  "span": {
                    "start": 72,
                    "end": 93
                  }
                }
              ]
            },
            "span": {
              "start": 66,
              "end": 94
            }
          }
        }
      },
      "span": {
        "start": 41,
        "end": 94
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "map"
                },
                "span": {
                  "start": 95,
                  "end": 99
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Array": [
                    {
                      "key": {
                        "kind": {
                          "String": "a"
                        },
                        "span": {
                          "start": 103,
                          "end": 106
                        }
                      },
                      "value": {
                        "kind": {
                          "Int": 1
                        },
                        "span": {
                          "start": 110,
                          "end": 111
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 103,
                        "end": 111
                      }
                    },
                    {
                      "key": {
                        "kind": {
                          "String": "b"
                        },
                        "span": {
                          "start": 113,
                          "end": 116
                        }
                      },
                      "value": {
                        "kind": {
                          "Int": 2
                        },
                        "span": {
                          "start": 120,
                          "end": 121
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 113,
                        "end": 121
                      }
                    }
                  ]
                },
                "span": {
                  "start": 102,
                  "end": 122
                }
              }
            }
          },
          "span": {
            "start": 95,
            "end": 122
          }
        }
      },
      "span": {
        "start": 95,
        "end": 124
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "val"
                },
                "span": {
                  "start": 124,
                  "end": 128
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "ArrayAccess": {
                    "array": {
                      "kind": {
                        "Variable": "map"
                      },
                      "span": {
                        "start": 131,
                        "end": 135
                      }
                    },
                    "index": {
                      "kind": {
                        "String": "a"
                      },
                      "span": {
                        "start": 136,
                        "end": 139
                      }
                    }
                  }
                },
                "span": {
                  "start": 131,
                  "end": 140
                }
              }
            }
          },
          "span": {
            "start": 124,
            "end": 140
          }
        }
      },
      "span": {
        "start": 124,
        "end": 142
      }
    },
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "Variable": "sum"
            },
            "span": {
              "start": 147,
              "end": 151
            }
          }
        ]
      },
      "span": {
        "start": 142,
        "end": 153
      }
    },
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "Variable": "val"
            },
            "span": {
              "start": 158,
              "end": 162
            }
          }
        ]
      },
      "span": {
        "start": 153,
        "end": 164
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 164
  }
}
